--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">Sue Look</a>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -28,6 +28,12 @@
                 </ul>
             </div>
         </nav>
+        <div class="row">
+            
+        </div>
+        <div class="row">
+          <div class="col">Copyright &copy;</div>  
+        </div>
     </div>
 
 
