--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col-sm-2"></div>
+            <div class="col-sm-2"><img src="assets\images\about_sue.png" alt="Sue Look"></div>
             <div class="col-sm-6">Sue is an aspiring full stack developer. She enjoys crafting websites that are user friendly and visually appealing. 
 
                 Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking, reading and learning new things. 
