styled footer and style sheets

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap-Portfolio</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -29,18 +31,34 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col-sm-2"><img src="assets\images\about_sue.png" alt="Sue Look"></div>
-            <div class="col-sm-6">Sue is an aspiring full stack developer. She enjoys crafting websites that are user friendly and visually appealing. 
+            <div class="col-sm-3">
+                <img src="assets\images\about_sue.png" alt="Sue Look">
+            </div>
+            <div class="col-sm-6">
+                <p>Sue is an aspiring full stack developer. She enjoys crafting websites that are user friendly and
+                    visually appealing.</p>
 
-                Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking, reading and learning new things. 
-                
-                Sue is originally from Upstate NY and recently moved to the Charlotte Area. She spent 16 years in education and prior to that 10 years in the travel industry. 
-                
-                Sue has a very large family. Her immediate family consists of her husband of 13 years and 4 daughters. She currently does not have any pets. She and her husband just became "empty-nesters".</div>
+                <p>Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking,
+                    reading and learning new things.</p>
+
+                <p>Sue is originally from Upstate NY and recently moved to the Charlotte Area. She spent 16
+                    years in education and prior to that 10 years in the travel industry.</p>
+            </div>
+            <div class="col-sm-8">
+                <p>Sue has a very large family. Her immediate family consists of her husband of 13 years and
+                    4 daughters. She currently does not have any pets. She and her husband just became
+                    "empty-nesters".</p>
+            </div>
+
         </div>
-        <div class="row">
-          <div class="col">Copyright &copy;</div>  
+    </div>
+    <div class="row">
+        <div class="col">
+            <div class="suefooter">
+                Copyright &copy;
+            </div>
         </div>
+    </div>
     </div>
 
 
