populated the article

--- a/index.html
+++ b/index.html
@@ -31,31 +31,25 @@
             </div>
         </nav>
         <div class="row">
-            <div class="col-sm-3">
-                <img src="assets\images\about_sue.png" alt="Sue Look">
-            </div>
-            <div class="col-sm-6">
-                <p>Sue is an aspiring full stack developer. She enjoys crafting websites that are user friendly and
-                    visually appealing.</p>
-
-                <p>Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking,
-                    reading and learning new things.</p>
-
-                <p>Sue is originally from Upstate NY and recently moved to the Charlotte Area. She spent 16
-                    years in education and prior to that 10 years in the travel industry.</p>
-            </div>
+            <div class="col-sm-2"></div>
             <div class="col-sm-8">
-                <p>Sue has a very large family. Her immediate family consists of her husband of 13 years and
-                    4 daughters. She currently does not have any pets. She and her husband just became
-                    "empty-nesters".</p>
+                    <p><img src="assets\images\about_sue.png" alt="Photo of Sue">
+                        Sue is an aspiring full stack developer. She enjoys crafting websites that are user 
+                        friendly and visually appealing.
+                        <br/><br/>Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking, reading
+                        and learning new things. 
+                        <br/><br/>Sue is originally from Upstate NY and recently moved to the Charlotte Area. 
+                        She spent 16 years in education and prior to that 10 years in the travel industry.
+                        <br/><br/>Sue has a very large family. Her immediate family consists of her husband of 13 years and 4 daughters. 
+                        She currently does not have any pets. She and her husband just became "empty-nesters".
+                        <br/><br/>
+                    </p>
             </div>
-
-        </div>
     </div>
     <div class="row">
         <div class="col">
             <div class="suefooter">
-                Copyright &copy;
+                    <br/><br/>Copyright &copy;
             </div>
         </div>
     </div>
