--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Sue Look</a>
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <div class="col-sm-2"></div>
+            <a class="navbar-brand" href="#" style="color:#ffffff">Sue Look</a>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                    </li>
+                    </li>|
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>
+                    </li>|
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
+                <div class="col-sm-2"></div>
             </div>
         </nav>
         <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8">
+            <div class="col-sm-8" style="border:solid #cccccc 2px; background-color:#ffffff; margin:20px 0px 30px">
+                    <h2>About Me</h2>
                     <p><img src="assets\images\about_sue.png" alt="Photo of Sue">
                         Sue is an aspiring full stack developer. She enjoys crafting websites that are user 
                         friendly and visually appealing.
