--- a/index.html
+++ b/index.html
@@ -34,28 +34,37 @@
         </nav>
         <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8" style="border:solid #cccccc 2px; background-color:#ffffff; margin:20px 0px 30px">
-                    <h2>About Me</h2>
-                    <p><img src="assets\images\about_sue.png" alt="Photo of Sue">
-                        Sue is an aspiring full stack developer. She enjoys crafting websites that are user 
-                        friendly and visually appealing.
-                        <br/><br/>Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping, horticulture, baking, reading
-                        and learning new things. 
-                        <br/><br/>Sue is originally from Upstate NY and recently moved to the Charlotte Area. 
-                        She spent 16 years in education and prior to that 10 years in the travel industry.
-                        <br/><br/>Sue has a very large family. Her immediate family consists of her husband of 13 years and 4 daughters. 
-                        She currently does not have any pets. She and her husband just became "empty-nesters".
-                        <br/><br/>
-                    </p>
+            <div class="col-sm-8">
+
+                <div class="card my-4">
+                    <div class="card-body">
+                        <h5 class="card-title">About Me</h5>
+                        <p class="card-text"><img class="thumbnail" src="assets\images\about_sue.png"
+                                alt="Photo of Sue">
+                            Sue is an aspiring full stack developer. She enjoys crafting websites that are user
+                            friendly and visually appealing.
+                            <br /><br />Sue's hobbies are traveling, boating, snowmobiling, ATV'ing, camping,
+                            horticulture, baking, reading
+                            and learning new things.
+                            <br /><br />Sue is originally from Upstate NY and recently moved to the Charlotte Area.
+                            She spent 16 years in education and prior to that 10 years in the travel industry.
+                            <br /><br />Sue has a very large family. Her immediate family consists of her husband of 13
+                            years and 4 daughters.
+                            She currently does not have any pets. She and her husband just became "empty-nesters".
+                            </p>
+                    </div>
+                </div>
+
             </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="suefooter">
-                    <br/><br/>Copyright &copy;
+
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class="suefooter">
+                    <br /><br />Copyright &copy;
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
 
