--- a/contact.html
+++ b/contact.html
@@ -34,24 +34,28 @@
         </nav>
         <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8" style="border:solid #cccccc 2px; background-color:#ffffff; margin:20px 0px 30px">
-                <h2>Contact</h2>
-                <form>
-                    <br /><br /><br /><br /><br />
-                    Name:
-                    <br />
-                    <input type="text" name="username" value="John Smith" size="84">
-                    <br /><br />
-                    Email:
-                    <br />
-                    <input type="text" name="email" value="example@gmail.com" size="84">
-                    <br /><br />
-                    Message:
-                    <br />
-                    <textarea name="message" rows="10" cols="78"></textarea>
-                    <br /><br />
-                    <input type="submit" value="Submit">
-                </form>
+            <div class="col-sm-8">
+                <div class="card my-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Contact</h5>
+                        <form>
+                            <br /><br /><br />
+                            Name:
+                            <br />
+                            <input type="text" name="username" value="John Smith" size="84">
+                            <br /><br />
+                            Email:
+                            <br />
+                            <input type="text" name="email" value="example@gmail.com" size="84">
+                            <br /><br />
+                            Message:
+                            <br />
+                            <textarea name="message" rows="10" cols="86"></textarea>
+                            <br /><br />
+                            <input type="submit" value="Submit">
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -62,8 +66,6 @@
             </div>
         </div>
     </div>
-
-
 </body>
 
 </html>
