--- a/portfolio.html
+++ b/portfolio.html
@@ -34,30 +34,33 @@
         </nav>
         <div class="row">
             <div class="col-sm-2"></div>
-            <div class="col-sm-8" style="border:solid #cccccc 2px; background-color:#ffffff; margin:20px 0px 30px">
+            <div class="col-sm-8">
+                <div class="card my-4">
+                    <div class="card-body">
+                        <h5 class="card-title">Portfolio</h5>
 
-                <h2>Portfolio</h2>
-                <div class="div-port">
-                    <img src="assets\images\african_violet.jpg" alt="african violet">
-                    <div class="div-label">African Violet</div>
+                        <div class="div-port">
+                            <img src="assets\images\african_violet.jpg" alt="african violet">
+                            <div class="div-label">African Violet</div>
+                        </div>
+                        <div class="div-port">
+                            <img src="assets\images\autumn_trees.jpg" alt="autumn trees">
+                            <div class="div-label">Autumn Trees</div>
+                        </div>
+                        <div class="div-port">
+                            <img src="assets\images\orchid_flower.jpg" alt="orchid flower">
+                            <div class="div-label">Orchid Flower</div>
+                        </div>
+                        <div class="div-port">
+                            <img src="assets\images\rocky_coast.jpg" alt="rocky coast">
+                            <div class="div-label">Rocky Coast</div>
+                        </div>
+                        <div class="div-port">
+                            <img src="assets\images\tropical_beach.jpg" alt="tropical beach">
+                            <div class="div-label">Tropical Beach</div>
+                        </div>
+                    </div>
                 </div>
-                <div class="div-port">
-                    <img src="assets\images\autumn_trees.jpg" alt="autumn trees">
-                    <div class="div-label">Autumn Trees</div>
-                </div>
-                <div class="div-port">
-                    <img src="assets\images\orchid_flower.jpg" alt="orchid flower">
-                    <div class="div-label">Orchid Flower</div>
-                </div>
-                <div class="div-port">
-                    <img src="assets\images\rocky_coast.jpg" alt="rocky coast">
-                    <div class="div-label">Rocky Coast</div>
-                </div>
-                <div class="div-port">
-                    <img src="assets\images\tropical_beach.jpg" alt="tropical beach">
-                    <div class="div-label">Tropical Beach</div>
-                </div>
-
             </div>
         </div>
         <div class="row">
