responsive form added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bootstrap-Portfolio</title>
+ 
     <!-- style sheets -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -22,7 +23,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="col-sm-2"></div>
-            <a class="navbar-brand mb-0" href="#" style="color:#ffffff">Sue Look</a>
+            <a class="navbar-brand" href="#" style="color:#ffffff">Sue Look</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSue" aria-controls="navbarSue" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>            
