--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact</title>
+    <!-- style sheets -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- javascript CDNs -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -17,14 +23,17 @@
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
             <div class="col-sm-2"></div>
             <a class="navbar-brand" href="#" style="color:#ffffff">Sue Look</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSue" aria-controls="navbarSue" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>            
+            <div class="collapse navbar-collapse" id="navbarSue">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-                    </li>|
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
-                    </li>|
+                    </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
@@ -38,22 +47,23 @@
                 <div class="card my-4">
                     <div class="card-body">
                         <h5 class="card-title">Contact</h5>
+
                         <form>
-                            <br /><br /><br />
-                            Name:
-                            <br />
-                            <input type="text" name="username" value="John Smith" size="84">
-                            <br /><br />
-                            Email:
-                            <br />
-                            <input type="text" name="email" value="example@gmail.com" size="84">
-                            <br /><br />
-                            Message:
-                            <br />
-                            <textarea name="message" rows="10" cols="86"></textarea>
-                            <br /><br />
-                            <input type="submit" value="Submit">
+                            <div class="form-group">
+                              <label for="NameSue">Name:</label>
+                              <input type="text" class="form-control" id="NameSue" aria-describedby="NameSueHelp" placeholder="Enter Full Name">
+                            </div>
+                            <div class="form-group">
+                              <label for="EmailSue">Email:</label>
+                              <input type="email" class="form-control" id="EmailSue" placeholder="Enter Email Address">
+                            </div>
+                            <div class="form-group">
+                                <label for="MessageSue">Message:</label>
+                                <textarea class="form-control" id="MessageSue" rows="5"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
                         </form>
+
                     </div>
                 </div>
             </div>
